<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".fragment.MenuLayout">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_menu" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitStart"
            android:src="@drawable/logo_menu" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_mgreen"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_menu_home" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"

                    android:gravity="left"
                    android:text="@string/go_to_home"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_mgreen"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_menu_resister" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"

                    android:gravity="left|center_vertical"
                    android:text="@string/resister_color_code"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_cap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_mgreen"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_menu_cap" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"

                    android:gravity="left"
                    android:text="@string/capacitor"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_converter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_mgreen"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_menu_converter" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"

                    android:gravity="left"
                    android:text="@string/unit_converter"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_law_ohm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_mgreen"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_menu_ohm" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"

                    android:gravity="left|center_vertical"
                    android:text="@string/law_s_ohm"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn_mgreen"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingLeft="15dp"
                android:paddingTop="4dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_menu_about" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"

                    android:gravity="left"
                    android:text="@string/about"
                    android:textSize="18sp" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>


